# Sem2-lab2

./: ArraySequence.hpp  ArraySequenceTests.hpp  CMakeLists.txt  DynamicArray.cpp  DynamicArray.hpp  DynamicArrayTests.hpp  ErrorHandler.h  Errors.h  LICENSE  LinkedList.cpp  LinkedList.hpp  LinkedListTests.hpp  ListSequence.hpp  README.md  RectMatrix.hpp  RectMatrixTests.hpp  Sequence.cpp  Sequence.h  Sequence.hpp  Sequence_lib.h  main.cpp  menu.cpp  tests.cpp
PlayGround/: CMakeLists.txt  main.cpp
